# lexe-sdk

./: README.md
.github/workflows/: ci.yml
python/: README.md
rust/: README.md
rust-example/: Cargo.toml
rust-example/src/: lib.rs  main.rs
rust/rust-example/: Cargo.toml
rust/rust-example/src/: lib.rs  main.rs
