[package]
name = "rust-example"
version = "0.0.0"
edition = "2021"

# Empty workspace table ensures this is a standalone crate, not part of any
# parent monorepo workspace.
[workspace]

[dependencies]

lexe = { git = "https://github.com/lexe-app/lexe-public" }
# lexe = { path = "../../public/lexe" }

dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
